--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>SEAS</title>
+	<title>Harvard SEAS Faculty Connections</title>
 
 	<!--including bootstrap for demo purposes only-->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -517,9 +517,59 @@
 
 	<section id="end-blurb" class="section row blurb-row">
 		<div class="container-fluid center-blurb">
-			<div class="row justify-content-center">
-				<div class="col-xs-10 align-self-center">
-					<p>Fin!</p>
+			<div class="text-block">
+				<h1>
+					Fin! Thank you for reading!
+				</h1>
+				<div class="row profile-row">
+					<div class="col profile">
+						<img src="img/NhanHuynh.jpg">
+						<div class="profile-info">
+							<span style="font-size:24px;">Nhan Huynh</span>
+							<br>
+							<span style="font-size:14px;">Research Assistant at MIT</span>
+						</div>
+					</div>
+					<div class="col profile">
+						<img src="img/TylerPiazza.jpg">
+						<div class="profile-info">
+							<span style="font-size:24px;">Tyler Piazza</span>
+							<br>
+							<span style="font-size:14px;">Math and Computer Science '21</span>
+						</div>
+					</div>
+					<div class="col profile">
+						<img src="img/BarbaraBai.jpg">
+						<div class="profile-info">
+							<span style="font-size:24px;">Barbara Bai</span>
+							<br>
+							<span style="font-size:14px;">Data Scientist at HMS</span>
+						</div>
+					</div>
+					<div class="col profile">
+						<img src="img/ElizaGrinnell.jpg">
+						<div class="profile-info">
+							<span style="font-size:24px;">Eliza Grinnell</span>
+							<br>
+							<span style="font-size:14px;">Director of Visual Communications <br>and New Media at Harvard SEAS</span>
+						</div>
+					</div>
+				</div>
+				<div class="end-text">
+					<p>
+						We created this data story for Harvard's COMPSCI 171: Visualization course in Fall 2020.
+						All the code and data can be found in our <a href="https://github.com/TPiazza21/CS171FinalProject">
+						GitHub repo</a>. We would like to thank Jeff Licht for providing a dataset of faculty information
+						from the <a href="https://www.seas.harvard.edu/">Harvard SEAS website</a>. Data for faculty publications
+						were scraped from <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a>. Photos are courtesy of
+						the <a href="https://www.flickr.com/photos/grinnell/">Harvard SEAS Flickr account</a>.
+					</p>
+					<p style="font-size: 12px;">
+						P.S. As you can see in this photo, the new campus in Allston is amazing...
+						<a href="https://www.google.com/maps/dir//112-108+Western+Ave+Boston+MA+02163">
+							go check it out!
+						</a>
+					</p>
 				</div>
 			</div>
 		</div>
