--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Harvard SEAS Faculty Connections</title>
+	<title>Interdisciplinary @ Harvard SEAS</title>
 
 	<!--including bootstrap for demo purposes only-->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -34,12 +34,6 @@
 	<!-- fade effects -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-	<script type="text/javascript">
-		function removeDiv(btn){
-			((btn.parentNode).parentNode).removeChild(btn.parentNode);
-		}
-	</script>
-
 	<!-- Our style sheet -->
 	<link rel="stylesheet" href="css/styles.css">
 
@@ -51,7 +45,7 @@
 <div class="main">
 	<section id="section-1" class="section row">
 		<div class="col-xs-12">
-			<h1 data-aos="fade" data-aos-duration="1000">Harvard Engineering School: Faculty Connections</h1>
+			<h1 data-aos="fade" data-aos-duration="1000">Interdisciplinary @ Harvard SEAS</h1>
 			<h3 data-aos="fade" data-aos-duration="1000">A tool for prospective students, industry, and academic collaborators</h3>
 		</div>
 	</section>
@@ -62,6 +56,18 @@
 				<p>
 					Harvard John A. Paulson School of Engineering and Applied Sciences (SEAS) consists of 148 faculty
 					engaged in teaching and research across eight academic areas and 47 research areas.
+				</p>
+			</div>
+
+			<div class="student student-intro">
+				<img src="img/girl.png" style="height: 150px; width: 150px;">
+				<p>
+					This is Rachel. She recently graduated from the UC Berkley College of Engineering.
+					<br><br>
+					She has experience in electrical engineering, computer science, and mechanical engineering and
+					she wants to do research at Harvard that combines all these areas.
+					<br><br>
+					Follow along as she uses this tool to find a faculty advisor!
 				</p>
 			</div>
 		</div>
@@ -115,29 +121,18 @@
 
 		</div>
 
-<!--		<div class="student">-->
-<!--			<div class="text-student">-->
-<!--				<p style="text-align: justify">-->
-<!--					A typical graduate student, Rachel Zoll, recently graduated from UC Berkley College of Engineering.-->
-<!--					She has experience in electrical engineering, computer science, and mechanical engineering.-->
-<!--					She wants to find a way to combine her knowledge and she thinks that robotics might be a good option.-->
-<!--					<br><br>-->
-<!--					Rachel notices from the academic clusters that Harvard SEAS has a large cluster of faculty in computer science-->
-<!--					(included electrical engineering), and faculty clusters in materials science and mechanical engineering-->
-<!--					and applied physics. This is encouraging.-->
-<!--					<br><br>-->
-<!--					Through the office location dropdown she notices the faculty clusters in two buildings, Maxwell Dworkin-->
-<!--					and Pierce Hall and makes a mental note to learn more about these locations.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="image-student">-->
-<!--				<img src="img/girl.png" style="height: 150px; width: 150px;">-->
-<!--			</div>-->
-<!--			<div class="button-student">-->
-<!--				<button class="remove" onclick="removeDiv(this);">x</button>-->
-<!--			</div>-->
-<!--		</div>-->
-
+		<div class="student">
+			<button id='close' onclick='this.parentNode.parentNode.removeChild(this.parentNode); return false;'>x</button>
+			<img src="img/girl.png" style="height: 150px; width: 150px;">
+			<p>
+				From the dot visualization, Rachel notices from the academic clusters that Harvard SEAS has a large cluster
+				of faculty in computer science (included electrical engineering), and faculty clusters in materials science
+				and mechanical engineering and applied physics. This is encouraging.
+				<br><br>
+				Through the office location dropdown she notices the faculty clusters in two buildings, Maxwell Dworkin
+				and Pierce Hall, and makes a mental note to learn more about these locations.
+			</p>
+		</div>
 	</section>
 
 	<section id="section-faculty-interest-table-blurb" class="section row">
@@ -212,32 +207,23 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
-
 		</div>
 
-<!--		<div class="student">-->
-<!--			<div class="text-student">-->
-<!--				<p style="text-align: justify">-->
-<!--					From the filter dropdown menu, Rachel selects the research interest Bioinspired Robotics and Computing.-->
-<!--					She compares the ten faculty in the results, and makes note of the four faculty who are also researching-->
-<!--					artificial intelligence, Robert Wood, Cengiz Pehlevan, Demba Ba, and Radhika Nagpal. She hovers over their-->
-<!--					red grid elements and notes their web address and full lists of research interests.-->
-<!--					<br><br>-->
-<!--					Next she filters the faculty by Computer Science and notes the large number of Computer Science faculty-->
-<!--					researching artificial intelligence.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="image-student">-->
-<!--				<img src="img/girl.png" style="height: 150px; width: 150px;">-->
-<!--			</div>-->
-<!--			<div class="button-student">-->
-<!--				<button class="remove" onclick="removeDiv(this);">x</button>-->
-<!--			</div>-->
-<!--		</div>-->
-
+		<div class="student">
+			<button id='close' onclick='this.parentNode.parentNode.removeChild(this.parentNode); return false;'>x</button>
+			<img src="img/girl.png" style="height: 150px; width: 150px;">
+			<p>
+				From the filter dropdown menu, Rachel selects the research interest Bioinspired Robotics and Computing.
+				She compares the ten faculty in the results, and makes note of the four faculty who are also researching
+				artificial intelligence, Robert Wood, Cengiz Pehlevan, Demba Ba, and Radhika Nagpal. She hovers over their
+				red grid elements and notes their web address and full lists of research interests.
+				<br><br>
+				Next she filters the faculty by Computer Science and notes the large number of Computer Science faculty
+				researching artificial intelligence.
+			</p>
+		</div>
 	</section>
 
 	<section id="relationship-blurb" class="section row">
@@ -261,29 +247,22 @@
 			</div>
 		</div>
 
-<!--		<div class="student">-->
-<!--			<div class="text-student">-->
-<!--				<p style="text-align: justify">-->
-<!--					Rachel searches the list of faculty for the four faculty that caught her attention in previously,-->
-<!--					and compares their affiliations. She notices that, of the four, Rob Wood and Radhika Nagpal have-->
-<!--					affiliations with several centers and institutes. She looks to see which other faculty are also affiliated-->
-<!--					with those same centers and institutes. She has heard of the Wyss Institute and makes a note of it for-->
-<!--					future reference.-->
-<!--					<br><br>-->
-<!--					Rachel selects Computer Science from the side menu and is surprised and excited by how highly connected-->
-<!--					that academic areas is with other schools and centers at Harvard.-->
-<!--					<br><br>-->
-<!--					Rachel hovers over robotics at Harvard and notes the three academic areas affiliated with that initiative.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="image-student">-->
-<!--				<img src="img/girl.png" style="height: 150px; width: 150px;">-->
-<!--			</div>-->
-<!--			<div class="button-student">-->
-<!--				<button class="remove" onclick="removeDiv(this);">x</button>-->
-<!--			</div>-->
-<!--		</div>-->
-
+		<div class="student">
+			<button id='close' onclick='this.parentNode.parentNode.removeChild(this.parentNode); return false;'>x</button>
+			<img src="img/girl.png" style="height: 150px; width: 150px;">
+			<p>
+				Rachel searches the list of faculty for the four faculty that caught her attention in previously,
+				and compares their affiliations. She notices that, of the four, Robert Wood and Radhika Nagpal have
+				affiliations with several centers and institutes. She looks to see which other faculty are also affiliated
+				with those same centers and institutes. She has heard of the Wyss Institute and makes a note of it for
+				future reference.
+				<br><br>
+				Rachel selects Computer Science from the side menu and is surprised and excited by how highly connected
+				that academic areas is with other schools and centers at Harvard.
+				<br><br>
+				Rachel clicks on Robotics at Harvard and notes the three academic areas affiliated with that initiative.
+			</p>
+		</div>
 	</section>
 
 	<section id="section-faculty-adj-blurb" class="section row">
@@ -364,26 +343,19 @@
 			</div>
 		</div>
 
-<!--		<div class="student">-->
-<!--			<div class="text-student">-->
-<!--				<p style="text-align: justify">-->
-<!--					Rachel selects the Robotics and Control from the filter dropdown menu.-->
-<!--					She notices that Rob Wood has published papers with both Conor Walsh and David Clarke.-->
-<!--					She clicks on the highlighted squares to see the number of papers they’ve published together, notes the-->
-<!--					words that appeared most frequently in those articles.-->
-<!--					<br><br>-->
-<!--					By selecting the dark blue color at the intersection of Rob Woods’s name she can see that this faculty-->
-<!--					member has published at least 201 papers.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="image-student">-->
-<!--				<img src="img/girl.png" style="height: 150px; width: 150px;">-->
-<!--			</div>-->
-<!--			<div class="button-student">-->
-<!--				<button class="remove" onclick="removeDiv(this);">x</button>-->
-<!--			</div>-->
-<!--		</div>-->
-
+		<div class="student">
+			<button id='close' onclick='this.parentNode.parentNode.removeChild(this.parentNode); return false;'>x</button>
+			<img src="img/girl.png" style="height: 150px; width: 150px;">
+			<p>
+				Rachel selects the Robotics and Control from the filter dropdown menu.
+				She notices that Robert Wood has published papers with both Conor Walsh and David Clarke.
+				She clicks on the highlighted squares to see the number of papers they’ve published together, notes the
+				words that appeared most frequently in those articles.
+				<br><br>
+				By selecting the dark blue color at the intersection of Robert Woods’s name she can see that this faculty
+				member has published at least 201 papers.
+			</p>
+		</div>
 	</section>
 
 	<section id="network-blurb" class="section row">
@@ -454,24 +426,18 @@
 			</div>
 		</div>
 
-<!--		<div class="student">-->
-<!--			<div class="text-student">-->
-<!--				<p style="text-align: justify">-->
-<!--					Rachel uses the network diagram to explore the relationships between Rob Wood, Radhika Nagpal,-->
-<!--					Conor Walsh, and David Clark. She notices how well-connected Rob Wood is to other faculty through joint-->
-<!--					membership in initiatives as well as through joint research efforts. She decides to apply to a-->
-<!--					PhD program at Harvard SEAS with Rob Wood as her faculty advisor. She clicks his photo and is directed-->
-<!--					to this professor’s contact information on the school website.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="image-student">-->
-<!--				<img src="img/girl.png" style="height: 150px; width: 150px;">-->
-<!--			</div>-->
-<!--			<div class="button-student">-->
-<!--				<button class="remove" onclick="removeDiv(this);">x</button>-->
-<!--			</div>-->
-<!--		</div>-->
-
+		<div class="student">
+			<button id='close' onclick='this.parentNode.parentNode.removeChild(this.parentNode); return false;'>x</button>
+			<img src="img/girl.png" style="height: 150px; width: 150px;">
+			<p>
+				Rachel uses the network diagram to explore the relationships between Robert Wood, Radhika Nagpal,
+				Conor Walsh, and David Clark. She notices how well-connected Robert Wood is to other faculty through joint
+				membership in initiatives as well as through joint research efforts.
+				<br><br>
+				She decides to apply to a  PhD program at Harvard SEAS with Robert Wood as her faculty advisor!
+				She clicks his photo and is directed to this professor’s contact information on the school website.
+			</p>
+		</div>
 	</section>
 
 	<section id="map-blurb" class="section row">
@@ -481,14 +447,6 @@
 					Find your professor on the map!
 				</p>
 			</div>
-
-			<!--
-			<div class="row justify-content-center">
-				<div class="col-xs-10 align-self-center">
-					<p style="font-size: 24px; color: white;">Find your professor on the map!</p>
-				</div>
-			</div>
-			-->
 		</div>
 	</section>
 
@@ -565,7 +523,7 @@
 						the <a href="https://www.flickr.com/photos/grinnell/">Harvard SEAS Flickr account</a>.
 					</p>
 					<p style="font-size: 12px;">
-						P.S. As you can see in this photo, the new campus in Allston is amazing...
+						P.S. As you can see in this photo, the new campus in Allston looks amazing...
 						<a href="https://www.google.com/maps/dir//112-108+Western+Ave+Boston+MA+02163">
 							go check it out!
 						</a>
@@ -574,8 +532,8 @@
 			</div>
 		</div>
 	</section>
-
 </div>
+
 
 	<!-- instantiate fullpage scroll -->
 	<script>
