--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				Rachel selects Computer Science from the side menu and is surprised and excited by how highly connected
 				that academic areas is with other schools and centers at Harvard.
 				<br><br>
-				Rachel clicks on Robotics at Harvard and notes the three academic areas affiliated with that initiative.
+				Rachel clicks on Robotics at Harvard and notes the four academic areas affiliated with that initiative.
 			</p>
 		</div>
 	</section>
@@ -523,7 +523,7 @@
 						the <a href="https://www.flickr.com/photos/grinnell/">Harvard SEAS Flickr account</a>.
 					</p>
 					<p style="font-size: 12px;">
-						P.S. As you can see in this photo, the new campus in Allston looks amazing...
+						P.S. As you can see in the background pic, the new campus in Allston looks amazing...
 						<a href="https://www.google.com/maps/dir//112-108+Western+Ave+Boston+MA+02163">
 							go check it out!
 						</a>
